--- a/public/assets/css/stylesheader_s.css
+++ b/public/assets/css/stylesheader_s.css
@@ -7,14 +7,14 @@
     justify-content: space-between;
     align-items: center;
     padding: 20px 50px;
-    background-color: #0F161E;
+    background-color: #FFFFFF ;
 }
 
 /* Logo */
 .header-custom-s .logo {
     font-size: 30px;
     font-weight: bold;
-    color: #FCE803;
+    color:#0F161E;
     margin-right: 5%;
 }
 
@@ -34,7 +34,7 @@
 }
 
 .header-custom-s nav ul li a {
-    color: #FCE803;
+    color: #0F161E;
     text-decoration: none;
     font-weight: 500;
     transition: color 0.3s;
@@ -43,7 +43,7 @@
 }
 
 .header-custom-s nav ul li a:hover {
-    color: #FFFFFF; 
+    color: #FCE803; 
     background-color: transparent;
 }
 
@@ -90,12 +90,13 @@
     margin-right: 10px;
     background: #ddd; /* Espacio reservado para imágenes */
     margin-top: 5px;
+    border: #0F161E;
 }
 
 .header-custom-s .btn-logout{
     background: transparent;
-    color: #FCE803;
-    border: 2px solid #FCE803;
+    color:  #0F161E;
+    border: 2px solid  #0F161E;
     border-radius: 20px;
     padding: 5px 13px;
     font-size: 15px;
@@ -104,8 +105,8 @@
 }
 
 .header-custom-s .btn-logout:hover {
-    background-color: #FCE803;
-    color: #0F161E;
+    background-color: #0F161E;
+    color: #FCE803;
 
 }
 
