--- a/public/assets/css/stylesintro.css
+++ b/public/assets/css/stylesintro.css
@@ -1,15 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap');
 
-body {
-    font-family: Arial, sans-serif;
+.bienvenida {
+    font-family: 'Manrope', sans-serif;
     margin: 0;
     padding: 0;
     text-align: center;
-    background-color: #f8f9fa;
+    background-color: #FFFFFF;
 }
 
+
 /* Estilos para la sección de introducción */
-.intro {
+.bienvenida .intro {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -18,35 +19,35 @@ body {
 }
 
 /* Estilos para el contenido de texto */
-.text-content {
+.bienvenida .text-content {
     max-width: 50%;
     text-align: left;
     padding: 20px;
 }
 
-.text-content h1 {
+.bienvenida .text-content h1 {
     font-size: 36px;
     color: #222;
 }
 
-.text-content p {
+.bienvenida .text-content p {
     font-size: 18px;
     color: #555;
 }
 
 /* Estilos para la imagen */
-.image-content {
+.bienvenida .image-content {
     max-width: 50%;
 }
 
-.image-content img {
+.bienvenida .image-content img {
     width: 100%;
     max-width: 500px;
     border-radius: 10px;
 }
 
 /* Estilos para la flecha de scroll */
-.scroll-down {
+.bienvenida .scroll-down {
     margin: 20px 0;
     font-size: 18px;
     color: #666;
@@ -54,13 +55,13 @@ body {
 }
 
 /* Estilos para la sección de servicios */
-.services {
+.bienvenida .services {
     background-color: white;
     padding: 50px 20px;
     text-align: center;
 }
 
-.services h2 {
+.bienvenida .services h2 {
     font-size: 32px;
     color: #222;
     margin-bottom: 20px;
