--- a/public/assets/css/stylesheader_s.css
+++ b/public/assets/css/stylesheader_s.css
@@ -8,6 +8,7 @@
     align-items: center;
     padding: 20px 50px;
     background-color: #FFFFFF ;
+    border-bottom: 0.1px solid #0F161E;
 }
 
 /* Logo */
@@ -101,6 +102,7 @@
     padding: 5px 13px;
     font-size: 15px;
     text-decoration: none;
+    margin-bottom: px;
 
 }
 
