--- a/public/assets/css/stylesintro.css
+++ b/public/assets/css/stylesintro.css
@@ -21,18 +21,22 @@
 /* Estilos para el contenido de texto */
 .bienvenida .text-content {
     max-width: 50%;
-    text-align: left;
+     
     padding: 20px;
 }
 
 .bienvenida .text-content h1 {
-    font-size: 36px;
-    color: #222;
+    font-size: 60px;
+    color: #0F161E;
+    align-items: center;
+    margin-top: 15px;
 }
 
 .bienvenida .text-content p {
-    font-size: 18px;
-    color: #555;
+    font-size: 15px;
+    align-items: center;
+    color: #222;
+     
 }
 
 /* Estilos para la imagen */
@@ -41,8 +45,8 @@
 }
 
 .bienvenida .image-content img {
-    width: 100%;
-    max-width: 500px;
+    width: 600px;
+    max-width: 1000px;
     border-radius: 10px;
 }
 
@@ -62,7 +66,7 @@
 }
 
 .bienvenida .services h2 {
-    font-size: 32px;
-    color: #222;
-    margin-bottom: 20px;
+    font-size: 65px;
+    color: #0F161E;
+    margin-bottom: -10px;
 }
