--- a/public/assets/css/styles_team.css
+++ b/public/assets/css/styles_team.css
@@ -11,6 +11,9 @@
 
 .team-section {
     padding: 50px 20px;
+    align-content: center;
+    margin-right: 0;
+    margin-left: 265px;
 }
 
 .team-section h2 {
