--- a/public/assets/css/styles_how_it_works.css
+++ b/public/assets/css/styles_how_it_works.css
@@ -6,16 +6,20 @@
     color: white;
     text-align: center;
     padding: 50px 20px;
+    max-height: 1200px;
+    height: 100%;
+
 }
 
 .steps-container {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-    gap: 40px;
+    gap: 60px;
     justify-content: center;
     align-items: center;
     max-width: 900px;
     margin: auto;
+    margin-top:70px;
 }
 
 .step {
@@ -26,12 +30,12 @@
 }
 
 .step-circle {
-    width: 100px;
-    height: 100px;
-    background-color: #FFD700;
+    width: 160px;
+    height: 160px;
+    background-color: #FCE803;
     color: black;
-    font-size: 36px;
-    font-weight: bold;
+    font-size:63px;
+    font-weight: 700;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -40,6 +44,8 @@
 }
 
 .step-text {
-    font-size: 16px;
+    font-size: 15px;
     max-width: 180px;
 }
+
+ 
