--- a/public/assets/css/styles_our_equipment.css
+++ b/public/assets/css/styles_our_equipment.css
@@ -6,38 +6,57 @@
     padding: 50px 20px;
 }
 .equipment-section h2 {
-    font-size: 36px;
-    margin-bottom: 10px;
+    font-size: 66px;
+    margin-bottom: 30px;
+    margin-top: -15px;
+    text-align: center;
+    font-weight: 900;
+}
+.equipment-section h3 {
+    font-size: 66px;
+    margin-top: 170px;
+    margin-bottom: 2px;
+    text-align: center;
+    font-weight: 900;
 }
 .equipment-section p {
-    max-width: 800px;
+    max-width: 600px;
     margin: 0 auto 30px;
     color: #666;
     line-height: 1.6;
+    font-weight: 400;
+    color: #0F161E;
 }
-
+ 
 .equipment-grid {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-template-columns: repeat(4, 1fr);
     gap: 20px;
-    max-width: 1000px;
+    max-width: 1200px;
     margin: auto;
 }
 .equipment-item {
     background: #fff;
-    border-radius: 10px;
+    border-radius: 12px;
     overflow: hidden;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
+    transition: transform 0.2s ease-in-out;
 }
+
+.equipment-item:hover{
+    transform: scale(1.05);
+}
+
 .equipment-item img {
     width: 100%;
-    height: 200px;
+    height: 350px;
     object-fit: cover;
 }
 .equipment-item .title {
-    background: #000;
+    background: #0F161E;
     color: #fff;
     text-align: center;
-    padding: 10px;
+    padding: 12px;
     font-size: 16px;
+    font-weight: bold;
 }
