--- a/public/assets/css/styles_body_dashboard.css
+++ b/public/assets/css/styles_body_dashboard.css
@@ -1,9 +1,18 @@
-body {
+html, body {
     margin: 0;
     padding: 0;
+    height: 100%;
+     
     background-color: #FFFF;
     width: 100%;
-    min-height: 100vh;
+     
     overflow-y: auto; /* Habilita el scroll vertical */
     font-family: "Manrope", sans-serif;
+}
+
+main {
+    
+    margin-top: 80px;
+    margin-left: 130px;
+    margin-bottom: 150px;
 }
