--- a/public/assets/css/styles_dashboard.css
+++ b/public/assets/css/styles_dashboard.css
@@ -12,7 +12,7 @@
 
 /*Sidebar*/
 .sidebar{ 
-    position: fixed;
+    position: absolute;
     display: flex;
     flex-direction: column;
     width: 220px;
