--- a/public/assets/css/styles_footer_dashboard.css
+++ b/public/assets/css/styles_footer_dashboard.css
@@ -2,6 +2,8 @@
 
 /* Estilos Generales del Footer */
 .footer-section {
+    position: relative;
+    z-index: 10;
     font-family: 'Manrope', sans-serif;
     background-color: #0F161E;
     display: block;
