--- a/public/assets/css/stylesproduct.css
+++ b/public/assets/css/stylesproduct.css
@@ -117,6 +117,16 @@
     transition: background-color 0.3s, transform 0.2s;
     box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
 }
+.best-product .add-to-cart a{
+    all: unset;
+    color: inherit;  /* Usa el color del texto padre */
+    text-decoration: none; /* Quita el subrayado */
+    background: none;
+    border: none;
+    padding: 0;
+    margin: 0;
+}
+
 
 .best-product .add-to-cart:hover {
     background-color: #e0d302;
